--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
+    <link type="text/css" rel="stylesheet" href="./css/layout.css">
 
     <!-- include styles for sub views -->
     <%- style -%>
