Rendering sign up page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
-    <link type="text/css" rel="stylesheet" href="./css/layout.css">
+    <link type="text/css" rel="stylesheet" href="/css/layout.css">
+    <link type="text/css" rel="stylesheet" href="/css/header.css">
 
     <!-- include styles for sub views -->
     <%- style -%>
@@ -13,8 +14,6 @@
     <%- include('_header'); -%>
 
     <%- body -%>
-
-    <%- include('_footer'); -%>
 
     <!-- include scripts for sub views -->
     <%- script -%>
