signing up an employee

--- a/views/employee_signup.ejs
+++ b/views/employee_signup.ejs
@@ -1,5 +1,5 @@
 <link type="text/css" rel="stylesheet" href="/css/employee_signup.css">
-<form class="signup-form">
+<form class="signup-form" action="/employee/create" method="post">
     <span class="signup-header">Sign Up</span>
     <div class="field">
        <input type="text" name="name" placeholder="Enter name"/>
