--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,13 +1,19 @@
 <header id="layout-header">
     <nav>
         <div class="nav-left">
-            <span>Placement Cell</span>
+            <span>
+                <a href="/">Placement Cell</a>
+            </span>
         </div>
         <div class="nav-right">
             <ul>
                 <li>Username</li>
-                <li>Login</li>
-                <li>SignUp</li>
+                <li>
+                    <a href="/employee/sign-in">Login</a>
+                </li>
+                <li>
+                    <a href="/employee/signup">SignUp</a>
+                </li>
             </ul>
         </div>
     </nav>
