--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -22,3 +22,11 @@ nav{
     margin-right: 15px;
     list-style: none;
 }
+
+a{
+    text-decoration: none;
+}
+
+a:visited{
+    color: whitesmoke;
+}
