create a user session/login using passport local strategy and express-session

--- a/views/employee_login.ejs
+++ b/views/employee_login.ejs
@@ -1,5 +1,5 @@
 <link type="text/css" rel="stylesheet" href="/css/employee_signup.css">
-<form class="signup-form" action="" method="post">
+<form class="signup-form" action="/employee/create-session" method="post">
     <span class="signup-header">Login</span>
     <div class="field">
        <input type="email" name="email" placeholder="Enter email" />
