storing employee session in database and logging out functionality

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -10,7 +10,7 @@
                 <% if(locals.employee){ %>
                     <li><%= locals.employee.name %></li>
                     <li>
-                        <a href="#">Logout</a>
+                        <a href="/employee/destroy-session">Logout</a>
                     </li>
                 <% }else{ %>
                     <li>
