Creating display students view

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
 
 <% if(locals.employee) { %>
     <div class="employee-home-view">
-        <a href="#">
+        <a href="/students/display-students">
             <div class="nav-to-stud">Students page</div>
         </a>
         <a href="#">
