--- a/views/students.ejs
+++ b/views/students.ejs
@@ -1,12 +1,11 @@
 <link type="text/css" rel="stylesheet" href="/css/students.css">
 <div id="students-container">
     <section id="form-section">
-        <form action="" method="post">
+        <form action="/students/create-student" method="post">
             <label>Name: </label><input id="name" type="text" name="name" placeholder="Student Name" required><br><br>
             <label>Email: </label><input id="email" type="text" name="email" placeholder="example@email.com" required><br><br>
             <label>Batch: </label><input id="batch" type="text" name="batch" placeholder="Batch Details" required><br><br>
             <label>College: </label><input id="college" type="text" name="college" placeholder="college" required><br><br>
-            <label>Status: </label><input id="status" type="text" name="status" placeholder="status" required><br><br>
             <label>DSA Score: </label><input id="DSA_FinalScore" type="text" name="DSA_FinalScore" placeholder="DSA Score" required><br><br>
             <label>Web Dev Score: </label><input id="WebD_FinalScore" type="text" name="WebD_FinalScore" placeholder="WebD Score" required><br><br>
             <label>React Score: </label><input id="React_FinalScore" type="text" name="React_FinalScore" placeholder="React_FinalScore" required><br><br>
