rendering interviews page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
         <a href="/students/display-students">
             <div class="nav-to-stud">Students page</div>
         </a>
-        <a href="#">
+        <a href="/interviews/display-interviews">
             <div class="nav-to-int">Interviews page</div>
         </a>
     </div>
