creating an interview

--- a/views/interviews.ejs
+++ b/views/interviews.ejs
@@ -3,7 +3,7 @@
     <section id="forms-container">
         <div class="create-interview-form">
             <h3>Create Interview</h3>
-            <form action="" method="post">
+            <form action="/interviews/create-interview" method="post">
                 <label>Company Name:</label><br>
                 <input id="company-name" type="text" name="company_name" placeholder="Company name" required><br><br>
                 <label>Interview Date:</label><br>
