display the list of interviews

--- a/assets/css/interviews.css
+++ b/assets/css/interviews.css
@@ -42,6 +42,7 @@
     flex-direction: row;
     justify-content: space-between;
     box-sizing: border-box;
+    margin-bottom: 2rem;;
     padding: 15px;
     border: 1px solid black;
 }
