--- a/views/interviews.ejs
+++ b/views/interviews.ejs
@@ -25,9 +25,11 @@
 
     <main id="interview-details">
         <h3>Interview Details</h3>
-        <div class="interview-container">
-            <span>Company name</span>
-            <span>Interview date</p>
-        </div>
+        <% for(let interview of interviews){ %>
+            <div class="interview-container">
+                <span><%= interview.company_name %></span>
+                <span><%= formatDate(interview.interview_date) %></span>
+            </div>
+        <% } %>
     </main>
 </div>
