fetch jobs data and rendering jobs page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,6 +10,9 @@
         <a href="/interviews/display-interviews">
             <div class="nav-to-int">Interviews page</div>
         </a>
+        <a href="/jobs/display-jobs">
+            <div class="nav-to-jobs">Jobs page</div>
+        </a>
     </div>
 <% }else { %>
     <div class="home-view">
