--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,6 +13,9 @@
         <a href="/jobs/display-jobs">
             <div class="nav-to-jobs">Jobs page</div>
         </a>
+        <a href="/students/download-data">
+            <div class="download-data">Download Students Data</div>
+        </a>
     </div>
 <% }else { %>
     <div class="home-view">
