--- a/assets/css/interviews.css
+++ b/assets/css/interviews.css
@@ -1,11 +1,13 @@
 #interview-page-container{
+    width: 100%;
     display: flex;
     flex-direction: row;
 }
 
 #forms-container{
-    height: 91.4vh;
+    height: 91.5vh;
     width: 25%;
+    min-width: 200px;
     display: flex;
     flex-direction: column;
     /* justify-content: space-around; */
@@ -16,6 +18,43 @@
 
 #forms-container h3{
     text-align: center;
+    color:#2196f3;
+}
+
+#forms-container input{
+    border: none;
+    border-bottom: 1px solid lightgray;
+}
+
+#forms-container input:focus{
+    outline: none;
+}
+
+select{
+    border: none;
+    border-bottom: 1px solid lightgray;
+    color: gray;
+}
+
+select:focus{
+    outline: none;
+}
+
+option:not(:checked) {
+    color: black; 
+} 
+
+#forms-container button{
+    height: 2rem;
+    width: 10em;
+    color: whitesmoke;
+    background-color: #2196f3;
+    border: none;
+    border-radius: 5px;
+}
+
+#forms-container button:hover{
+    cursor: pointer;
 }
 
 .create-interview-form{
@@ -35,6 +74,7 @@
 
 #interview-details-view h3{
     text-align: center;
+    color:#2196f3;
 }
 
 .interview-container{
@@ -48,8 +88,9 @@
     flex-direction: row;
     justify-content: space-between;
     box-sizing: border-box;
-    padding: 15px;
+    padding: 19px;
     border: 1px solid black;
+    background-color: #ccccf1;
 }
 
 .interview-details .fa-angle-down:hover{
@@ -66,6 +107,35 @@
 
 .students-list table, th, td{
     border: 1px solid black;
+}
+
+.students-list th{
+    background-color: lightgray;
+}
+
+.students-list td{
+    text-align: center;
+    box-sizing: border-box;
+    padding: 10px;
+    background-color: #E6E6FA;
+}
+
+.students-list td form select{
+    box-sizing: border-box;
+    margin-bottom: 10px;
+}
+
+.students-list td form button{
+    height: 2rem;
+    width: 6em;
+    color: whitesmoke;
+    background-color: #2196f3;
+    border: none;
+    border-radius: 5px;
+}
+
+.students-list td form button:hover{
+    cursor: pointer;
 }
 
 
