--- a/assets/css/jobs.css
+++ b/assets/css/jobs.css
@@ -4,13 +4,19 @@
     padding: 15px;
 }
 
+#jobs-list-container h1{
+    text-align: center;
+    color: #2196f3;
+}
+
 .job-container{
     height: 20rem;
-    width: 30em;
+    width: 35em;
     box-sizing: border-box;
     border: 1px solid black;
     padding: 10px;
     margin-bottom: 2rem;
+    background-color: #E6E6FA;
 }
 
 .job-header{
@@ -21,9 +27,11 @@
 .job-header span{
     display: block;
     font-size: x-large;
+    font-weight: 600;
     box-sizing: border-box;
     padding-top: 50px;
     padding-left: 5px;
+    color: #2196f3;
 } 
 
 .job-details a button{
@@ -33,6 +41,10 @@
     color: whitesmoke;
     border: none;
     border-radius: 5px;
+}
+
+.job-details h5{
+    display: inline;
 }
 
 .job-details a button:hover{
