--- a/views/interviews.ejs
+++ b/views/interviews.ejs
@@ -65,7 +65,7 @@
                                                     <option value="FAIL">FAIL</option>
                                                     <option value="ON HOLD">ON HOLD</option>
                                                     <option value="DID NOT ATTEMPT">DID NOT ATTEMPT</option>
-                                                </select><br><br>
+                                                </select><br>
                                                 <input type="hidden" name="result" value="<%= result.id %>">
                                                 <button>Update</button>
                                             </form>
