--- a/views/jobs.ejs
+++ b/views/jobs.ejs
@@ -1,5 +1,6 @@
 <link type="text/css" rel="stylesheet" href="/css/jobs.css">
 <div id="jobs-list-container">
+    <h1>Job Listings</h1>
     <% for(let job of jobs){ %>
         <div class="job-container">
             <div class="job-header">
@@ -7,10 +8,10 @@
                 <span><%= job.company_name %></span>
             </div>
             <div class="job-details">
-                <p>Job Title: <%= job.title %></p>
-                <p>Job Type: <%= job.job_type %></p>
-                <p>Job Location: <%= job.candidate_required_location %></p>
-                <p>Published date: <%= job.publication_date %></p>
+                <p><h5>Job Title:</h5> <%= job.title %></p>
+                <p><h5>Job Type:</h5> <%= job.job_type %></p>
+                <p><h5>Job Location:</h5> <%= job.candidate_required_location %></p>
+                <p><h5>Published date:</h5> <%= job.publication_date %></p>
                 <a href="<%= job.url %>" target="_blank">
                     <button>Apply</button>
                 </a>
