Adding notifications for other functionality

--- a/views/employee_login.ejs
+++ b/views/employee_login.ejs
@@ -2,10 +2,10 @@
 <form class="signup-form" action="/employee/create-session" method="post">
     <span class="signup-header">Login</span>
     <div class="field">
-       <input type="email" name="email" placeholder="Enter email" />
+       <input type="email" name="email" placeholder="Enter email" required/>
     </div>
     <div class="field">
-      <input type="password" name="password" placeholder="Enter password" />
+      <input type="password" name="password" placeholder="Enter password" required />
     </div>
     <div class="field">
       <button>Login</button>
