--- a/assets/css/students.css
+++ b/assets/css/students.css
@@ -65,3 +65,11 @@ td{
     padding: 5px;
     background-color: #E6E6FA;
 }
+
+/* td .fa-trash{
+    color: rgb(201, 14, 14);
+}
+
+td .fa-trash:hover{
+    cursor: pointer;
+} */
