creating an interview by making ajax request

--- a/views/interviews.ejs
+++ b/views/interviews.ejs
@@ -1,9 +1,9 @@
 <link type="text/css" rel="stylesheet" href="/css/interviews.css">
 <div id="interview-page-container">
     <section id="forms-container">
-        <div class="create-interview-form">
+        <div class="create-interview-container">
             <h3>Create Interview</h3>
-            <form action="/interviews/create-interview" method="post">
+            <form id="create-interview-form" action="/interviews/create-interview" method="post">
                 <label>Company Name:</label><br>
                 <input id="company-name" type="text" name="company_name" placeholder="Company name" required><br><br>
                 <label>Interview Date:</label><br>
