--- a/assets/css/interviews.css
+++ b/assets/css/interviews.css
@@ -57,7 +57,7 @@ option:not(:checked) {
     cursor: pointer;
 }
 
-.create-interview-form{
+.create-interview-container{
     margin-bottom: 4rem;
 }
 
