--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,3 +1,4 @@
+/* Navbar container */
 nav{
     display: flex;
     flex-direction: row;
@@ -7,6 +8,7 @@ nav{
     box-shadow: 1px 1px 1px 1px lightgrey;
 }
 
+/* Navbar left section */
 .nav-left span{
     display: block;
     padding-top: 1rem;
@@ -14,6 +16,7 @@ nav{
     font-size: larger;
 }
 
+/* Navbar right section */
 .nav-right ul{
     display: flex;
     flex-direction: row;
