--- a/assets/css/students.css
+++ b/assets/css/students.css
@@ -45,6 +45,10 @@
 /* Student details section */
 #student-details{
     max-height: 90vh;
+    width: 75%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     box-sizing: border-box;
     padding: 15px;
     overflow-y: scroll;
