home view change

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <link type="text/css" rel="stylesheet" href="/css/home.css">
 
-<h1>Placement cell <%= title %></h1>
+<h1>Placement cell Home page</h1>
 
 <% if(locals.employee) { %>
     <div class="employee-home-view">
